# X-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: demo_openai.py
x_agent/: __init__.py  agent.py  metrics.py  sycophancy.py  types.py
x_agent/layers/: __init__.py  argument_layer.py  audit_layer.py  tools.py
x_agent/llm/: __init__.py  base.py  google_provider.py  mock_provider.py  openai_provider.py
x_agent/prompts/: __init__.py  templates.py
