[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x-agent"
version = "0.1.0"
description = "Oversight Reasoning framework for auditing sycophantic behaviour in LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "X-Agent contributors" }]
keywords = ["llm", "sycophancy", "oversight", "debate", "agents", "nlp"]

dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
google = ["google-genai>=0.3.0"]
agentic = ["requests>=2.28.0", "beautifulsoup4>=4.11.0"]
dev = ["pytest>=7.0.0"]
all = [
    "openai>=1.0.0",
    "google-genai>=0.3.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["x_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
